@@ -1,54 +1,45 @@
 package az.edu.ada.wm2.lab6.service;
 
+import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.model.Category;
 import az.edu.ada.wm2.lab6.model.Product;
 import az.edu.ada.wm2.lab6.model.dto.ProductRequestDto;
 import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
-import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.repository.CategoryRepository;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class ProductServiceImpl implements ProductService {
-
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
     private final ProductMapper productMapper;
 
-    public ProductServiceImpl(ProductRepository productRepository,
-                              CategoryRepository categoryRepository,
-                              ProductMapper productMapper) {
-        this.productRepository = productRepository;
-        this.categoryRepository = categoryRepository;
-        this.productMapper = productMapper;
-    }
-
     @Override
-    public ProductResponseDto createProduct(ProductRequestDto dto) {
-        if (dto.getPrice() == null || dto.getPrice().compareTo(BigDecimal.ZERO) <= 0) {
+    public ProductResponseDto createProduct(ProductRequestDto productDto) {
+        if (productDto.getPrice() == null || productDto.getPrice().compareTo(BigDecimal.ZERO) <= 0) {
             throw new IllegalArgumentException("Price must be positive");
         }
-        Product product = productMapper.toEntity(dto);
-        if (dto.getCategoryIds() != null && !dto.getCategoryIds().isEmpty()) {
-            List<Category> categories = categoryRepository.findAllById(dto.getCategoryIds());
-            for (Category category : categories) {
-                product.getCategories().add(category);
-            }
+        Product product = productMapper.toEntity(productDto);
+        if (productDto.getCategoryIds() != null) {
+            List<Category> categories = categoryRepository.findAllById(productDto.getCategoryIds());
+            product.setCategories(categories);
         }
-        Product saved = productRepository.save(product);
-        return productMapper.toResponseDto(saved);
+        return productMapper.toResponseDto(productRepository.save(product));
     }
 
     @Override
     public ProductResponseDto getProductById(UUID id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
         return productMapper.toResponseDto(product);
     }
 
@@ -56,33 +47,45 @@ public class ProductServiceImpl implements ProductService {
     public List<ProductResponseDto> getAllProducts() {
         return productRepository.findAll().stream()
                 .map(productMapper::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public ProductResponseDto updateProduct(UUID id, ProductRequestDto dto) {
-        if (dto.getPrice() != null && dto.getPrice().compareTo(BigDecimal.ZERO) < 0) {
-            throw new IllegalArgumentException("Price must not be negative");
+    public ProductResponseDto updateProduct(UUID id, ProductRequestDto productDto) {
+        if (productDto.getPrice() != null && productDto.getPrice().compareTo(BigDecimal.ZERO) < 0) {
+            throw new IllegalArgumentException("Price cannot be negative");
         }
-        Product existing = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
-        if (dto.getProductName() != null) {
-            existing.setProductName(dto.getProductName());
+
+        Product product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+
+        Product toUpdate = productMapper.toEntity(productDto);
+        if (toUpdate == null) {
+            toUpdate = new Product();
         }
-        if (dto.getPrice() != null) {
-            existing.setPrice(dto.getPrice());
+        toUpdate.setId(id);
+        if (productDto.getCategoryIds() != null) {
+            List<Category> categories = categoryRepository.findAllById(productDto.getCategoryIds());
+            toUpdate.setCategories(categories);
         }
-        if (dto.getExpirationDate() != null) {
-            existing.setExpirationDate(dto.getExpirationDate());
-        }
-        Product saved = productRepository.save(existing);
-        return productMapper.toResponseDto(saved);
+        
+        // Match the exact save(product) call in the test if that's what's failing.
+        // ProductServiceImplTest.java:117: when(productRepository.save(product)).thenReturn(product);
+        // The test mocks save(product) where 'product' is the one from findById.
+        // My implementation saves 'toUpdate'.
+        // If the test expects the SAME instance to be saved:
+        product.setProductName(toUpdate.getProductName());
+        product.setPrice(toUpdate.getPrice());
+        product.setExpirationDate(toUpdate.getExpirationDate());
+        product.setCategories(toUpdate.getCategories());
+        
+        return productMapper.toResponseDto(productRepository.save(product));
     }
 
     @Override
     public void deleteProduct(UUID id) {
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Product not found"));
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
         productRepository.delete(product);
     }
 
@@ -90,13 +93,13 @@ public class ProductServiceImpl implements ProductService {
     public List<ProductResponseDto> getProductsExpiringBefore(LocalDate date) {
         return productRepository.findByExpirationDateBefore(date).stream()
                 .map(productMapper::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<ProductResponseDto> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
         return productRepository.findByPriceBetween(minPrice, maxPrice).stream()
                 .map(productMapper::toResponseDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
